Update course page button

--- a/layouts/course/single.html
+++ b/layouts/course/single.html
@@ -12,10 +12,11 @@
     <div align="start" class="content align-left">{{ .Content }}</div>
     
     <button
-      class="pay-button"
+      class="checkout-button pay-button"
       id="checkout-button-{{ .Param "sku" }}"
+      aria-label="Sign up"
       role="link">
-        Make a payment
+        Sign up
     </button>
 
 </main>
