--- a/static/css/main.css
+++ b/static/css/main.css
@@ -190,7 +190,7 @@ footer {
   background-color: black;
   color: white !important;
   font-weight: lighter;
-  letter-spacing: 0.15em;
+  letter-spacing: 1vw;
   -webkit-box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 4px 5px 0 rgba(0,0,0,0.14),0 1px 10px 0 rgba(0,0,0,0.12);
 }
 
