--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,7 @@
 html, body {
     height: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 body {
@@ -190,7 +192,7 @@ footer {
   background-color: black;
   color: white !important;
   font-weight: lighter;
-  letter-spacing: 1vw;
+  letter-spacing: 0.6vw;
   -webkit-box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 4px 5px 0 rgba(0,0,0,0.14),0 1px 10px 0 rgba(0,0,0,0.12);
 }
 
@@ -233,7 +235,7 @@ footer {
     max-width: 100%;
   }
   .cta-button {
-    letter-spacing: 0.6vw;
+    letter-spacing: 0.4vw;
   }
 }
 @media only screen and (max-width: 768px) {
