--- a/static/css/main.css
+++ b/static/css/main.css
@@ -45,6 +45,10 @@ img {
 
 .content {
     padding-top: 20px;
+    line-height: 2em;
+    font-size: 120%;
+    font-family: 'Sourcecode Pro' sans-serif;
+    font-weight: lighter;
 }
 
 .align-left {
@@ -145,7 +149,7 @@ footer {
 .description {
   line-height: 1.6;
   letter-spacing: 0.025em;
-  font-size: 1.1em;
+  font-size: 1.2em;
   max-width: 80%;
   font-weight: lighter;
 }
@@ -154,19 +158,25 @@ footer {
   font-size: 1em;
 }
 
-.pay-button:hover {
+.blue-button:hover {
   background-color: transparent;
   border: 1px solid #294782;
-  color: #294782;
+  color: black !important;
 }
 
-.pay-button {
+.blue-button {
   border-radius: 2em;
   padding: .8em 4em;
   border: 1px solid transparent;
   background-color: #294782;
   color: #fff;
   -webkit-box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 4px 5px 0 rgba(0,0,0,0.14),0 1px 10px 0 rgba(0,0,0,0.12);
+}
+
+#learn-more {
+  color:white;
+  display: inline-block;
+  margin-top: 1em;
 }
 
 .course-title {
