--- a/layouts/partials/body-close.html
+++ b/layouts/partials/body-close.html
@@ -3,9 +3,10 @@
   Override this in your site to insert code just before the closing <body> tag.
   For example, to install an analytics tracking package.
 -->
-<script src="https://js.stripe.com/v3"></script>
-<script>
-  (function() {
+<script defer src="https://js.stripe.com/v3"></script>
+<script defer>
+  var stripeLoaded = false;
+  function foo() {
     var stripe = Stripe('pk_live_ooEdyIRwZdd7kt97iK75F6pT00Dkx9chM7');
     var checkoutButtons = document.getElementsByClassName('checkout-button');
 
@@ -37,5 +38,10 @@
         });
       });
     })
+  }
+  (function checkStripe() {
+    stripeLoaded = typeof Stripe !== "undefined";
+    if (stripeLoaded === false) window.setTimeout(checkStripe, 10);
+    else foo();
   })();
 </script>
