--- a/layouts/partials/body-close.html
+++ b/layouts/partials/body-close.html
@@ -3,7 +3,7 @@
   Override this in your site to insert code just before the closing <body> tag.
   For example, to install an analytics tracking package.
 -->
-<script defer src="https://js.stripe.com/v3"></script>
+<script async src="https://js.stripe.com/v3"></script>
 <script defer>
   var stripeLoaded = false;
   function foo() {
