--- a/layouts/partials/list-item.html
+++ b/layouts/partials/list-item.html
@@ -8,9 +8,10 @@
     
     <div class="row">
       <div class="row-item">
-        <img srcset="{{ .Param "imageSm" }} 440w, {{ .Param "imageLg" }} 550w"
-         sizes="(max-width: 375px) 390px, 800px"
-         src="{{ .Param "imageLg"}}" alt="Freediving-{{ .Param "subtitle" }}">
+        <picture>
+          <source srcset="{{ .Param "image" }}" type="image/webp">
+          <img src="{{ .Param "imageLg" }}" alt="Freediving-{{ .Param "subtitle" }}">
+        </picture>
       </div>
       <div class="row-item row-item-text">
         <p class="title"><a href="{{ .Scratch.Get "link" }}">{{ .Param "subtitle" }}</a></p>
