Update img paths

--- a/layouts/partials/list-item.html
+++ b/layouts/partials/list-item.html
@@ -9,7 +9,7 @@
     <div class="row">
       <div class="row-item">
         <picture>
-          <source srcset="{{ .Param "image" }}" type="image/webp">
+          <source src="{{ .Param "image" }}" type="image/webp">
           <img src="{{ .Param "imageLg" }}" alt="Freediving-{{ .Param "subtitle" }}">
         </picture>
       </div>
