--- a/layouts/course/single.html
+++ b/layouts/course/single.html
@@ -14,6 +14,16 @@
 
     <div align="start" class="content align-left">{{ .Content }}</div>
     
+    <div style="margin-bottom: 2em;">
+      <a
+        href="https://facebook.com/freedive.california/events"
+        class="blue-button link"
+        target="_blank"
+        id="learn-more">
+            Upcoming Courses
+      </a>
+    </div>
+
     <button
       class="checkout-button blue-button"
       id="checkout-button-{{ .Param "sku" }}"
