Add background image

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ partial "header" . }}
 
-<main>
+<main class="hero">
     <div class="intro">
         <h1>FREEDIVE CALIFORNIA</h1>
         <h2>{{ markdownify .Site.Params.Description }}</h2>
