--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,6 +18,17 @@ main {
     max-width: 1000px;
 }
 
+.hero {
+  margin: -4px 0 0 0;
+  padding: 0;
+  max-width: inherit;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  background-image: url("/images/hero.jpeg");
+}
+
 img {
     max-width: 100%;
 }
@@ -25,18 +36,19 @@ img {
 /* Homepage */
 
 .intro {
-    transform: translateY(22vh);
+    transform: translateY(18vh);
     max-width: 1000px;
+    margin: 0 auto;
 }
 
 .intro > h1 {
-    color: #212121;
+    color: white;
     font-size: 4em;
     font-weight: lighter;
 }
 
 .intro > h2 {
-    color: #757575;
+    color: white;
     font-size: 1.5em;
     font-weight: lighter;
 }
