Remove footer on mobile

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -259,6 +259,9 @@ footer {
   .cta-button {
     letter-spacing: 0.4vw;
   }
+  footer {
+    display: none !important;
+  }
 }
 @media only screen and (max-width: 768px) {
  .row-item {
