--- a/layouts/conditions/simple.html
+++ b/layouts/conditions/simple.html
@@ -4,12 +4,24 @@
   <h1>Monterey Bay Conditions</h1>
   <section class="conditions">
     <section>
-      <h3>Nowcast</h3>
-      <img style="vertical-align:top" src="http://cdip.ucsd.edu/model_images/local_tz_filter.gd?map=Monterey_Bay_Swell_Model-Hs-u1-PST.png" />    
+      <h3>
+        <a href="http://cdip.ucsd.edu/themes/cdip?d2=p54&pb=1&u2=t:rs:p:Hs:r:Monterey_Bay_Swell_Model:c:nowcast">
+        Nowcast
+        </a>
+      </h3>
+      <a href="http://cdip.ucsd.edu/themes/cdip?d2=p54&pb=1&u2=t:rs:p:Hs:r:Monterey_Bay_Swell_Model:c:nowcast">
+        <img style="vertical-align:top" src="http://cdip.ucsd.edu/model_images/local_tz_filter.gd?map=Monterey_Bay_Swell_Model-Hs-u1-PST.png" />    
+      </a>
     </section>
     <section>
-      <h3>Forecast</h3>
-      <img src="http://cdip.ucsd.edu/model_images/local_tz_filter.gd?map=Monterey_Bay_Swell_Forecast-Hs-u1-PST-summary.png" />  
+      <h3>
+        <a href="http://cdip.ucsd.edu/themes/cdip?d2=p54&pb=1&u2=t:rs:p:Hs:r:Monterey_Bay_Swell_Forecast:c:forecast:h:summary">
+        Forecast
+        </a>
+      </h3>
+      <a href="http://cdip.ucsd.edu/themes/cdip?d2=p54&pb=1&u2=t:rs:p:Hs:r:Monterey_Bay_Swell_Forecast:c:forecast:h:summary">
+        <img src="http://cdip.ucsd.edu/model_images/local_tz_filter.gd?map=Monterey_Bay_Swell_Forecast-Hs-u1-PST-summary.png" />
+      </a>  
     </section>
   </section>
 </main>
