--- a/layouts/conditions/simple.html
+++ b/layouts/conditions/simple.html
@@ -5,22 +5,22 @@
   <section class="conditions">
     <section>
       <h3>
-        <a href="http://cdip.ucsd.edu/themes/cdip?d2=p54&pb=1&u2=t:rs:p:Hs:r:Monterey_Bay_Swell_Model:c:nowcast">
+        <a href="https://cdip.ucsd.edu/themes/cdip?d2=p54&pb=1&u2=t:rs:p:Hs:r:Monterey_Bay_Swell_Model:c:nowcast">
         Nowcast
         </a>
       </h3>
-      <a href="http://cdip.ucsd.edu/themes/cdip?d2=p54&pb=1&u2=t:rs:p:Hs:r:Monterey_Bay_Swell_Model:c:nowcast">
-        <img style="vertical-align:top" src="http://cdip.ucsd.edu/model_images/local_tz_filter.gd?map=Monterey_Bay_Swell_Model-Hs-u1-PST.png" />    
+      <a href="https://cdip.ucsd.edu/themes/cdip?d2=p54&pb=1&u2=t:rs:p:Hs:r:Monterey_Bay_Swell_Model:c:nowcast">
+        <img style="vertical-align:top" src="https://cdip.ucsd.edu/model_images/local_tz_filter.gd?map=Monterey_Bay_Swell_Model-Hs-u1-PST.png" />    
       </a>
     </section>
     <section>
       <h3>
-        <a href="http://cdip.ucsd.edu/themes/cdip?d2=p54&pb=1&u2=t:rs:p:Hs:r:Monterey_Bay_Swell_Forecast:c:forecast:h:summary">
+        <a href="https://cdip.ucsd.edu/themes/cdip?d2=p54&pb=1&u2=t:rs:p:Hs:r:Monterey_Bay_Swell_Forecast:c:forecast:h:summary">
         Forecast
         </a>
       </h3>
-      <a href="http://cdip.ucsd.edu/themes/cdip?d2=p54&pb=1&u2=t:rs:p:Hs:r:Monterey_Bay_Swell_Forecast:c:forecast:h:summary">
-        <img src="http://cdip.ucsd.edu/model_images/local_tz_filter.gd?map=Monterey_Bay_Swell_Forecast-Hs-u1-PST-summary.png" />
+      <a href="https://cdip.ucsd.edu/themes/cdip?d2=p54&pb=1&u2=t:rs:p:Hs:r:Monterey_Bay_Swell_Forecast:c:forecast:h:summary">
+        <img src="https://cdip.ucsd.edu/model_images/local_tz_filter.gd?map=Monterey_Bay_Swell_Forecast-Hs-u1-PST-summary.png" />
       </a>  
     </section>
   </section>
