--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
 <main class="hero">
     <div class="intro">
         <h1>FREEDIVE CALIFORNIA</h1>
-        <h2>{{ markdownify .Site.Params.Description }}</h2>
+        <h2>Explore the Stillness between Breaths</h2>
         {{ with .Content }} <div class="homepage-content text-justify">{{ . }}</div> {{ end }}
         <div class="button-div" aria-label="Learn to freedive"><a href="{{ .Site.BaseURL }}courses" class="cta-button">Learn to Freedive</a></div>
     </div>
