Add dark styles

--- a/layouts/partials/list-item.html
+++ b/layouts/partials/list-item.html
@@ -14,7 +14,7 @@
         </picture>
       </div>
       <div class="row-item row-item-text">
-        <p class="title"><a href="{{ .Scratch.Get "link" }}">{{ .Param "subtitle" }}</a></p>
+        <p class="title">{{ .Param "subtitle" }}</p>
         <h3 class="subtitle">{{ .Title }}</h3>
         <p class="description">{{ $.Scratch.Get "subheader" }}</p>
         <a
