--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -8,6 +8,23 @@ body {
     padding-top: 55px;
     display: flex;
     flex-direction: column;
+    background-color: black !important;
+    color: white !important;
+    font-weight: 300;
+}
+
+nav {
+  border: none !important;
+  min-height: 51px !important;
+  background-color: black !important;
+}
+
+.navbar-default .navbar-nav > li > a {
+  color: white !important;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+  text-decoration: underline;
 }
 
 main {
@@ -15,6 +32,10 @@ main {
     padding: 25px;
     flex: 1 0 auto;
     max-width: 1000px;
+}
+
+h1, h2, h3 {
+  font-weight: ligter;
 }
 
 .hero {
@@ -56,7 +77,7 @@ img {
 /* About */
 
 .about-page {
-  font-size: 1.8rem;
+  font-size: 2rem;
 }
 
 #about-img-top {
@@ -99,7 +120,7 @@ a.icon:hover {
 }
 
 a:hover {
-    color: var(--accent);
+    color: inherit !important;
 }
 
 /* Copyright message */
@@ -185,16 +206,16 @@ footer {
 
 .blue-button:hover {
   background-color: transparent;
-  border: 1px solid #294782;
-  color: black !important;
+  border: 1px solid white;
+  color: white !important;
 }
 
 .blue-button {
   border-radius: 2em;
+  color: black;
   padding: .8em 4em;
   border: 1px solid transparent;
-  background-color: #294782;
-  color: #fff;
+  background-color: white;
   -webkit-box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 4px 5px 0 rgba(0,0,0,0.14),0 1px 10px 0 rgba(0,0,0,0.12);
 }
 
@@ -203,7 +224,7 @@ footer {
 }
 
 #learn-more {
-  color:white;
+  color: black;
   display: inline-block;
   margin-top: 1em;
   text-decoration: none;
@@ -230,7 +251,6 @@ footer {
   border-radius: 2em;
   font-size: 1.5em;
   background-color: black;
-  color: white !important;
   font-weight: lighter;
   letter-spacing: 0.6vw;
   -webkit-box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 4px 5px 0 rgba(0,0,0,0.14),0 1px 10px 0 rgba(0,0,0,0.12);
@@ -268,6 +288,9 @@ span#temperature::after {
   }
   .conditions img {
     margin: auto;
+  }
+  .button-div {
+    margin-top: 13em;
   }
 }
 
@@ -310,7 +333,7 @@ span#temperature::after {
     max-width: 100%;
   }
   .cta-button {
-    letter-spacing: 0.4vw;
+    letter-spacing: 1vw;
   }
 }
 @media only screen and (max-width: 768px) {
