--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,9 @@
         <h1>FREEDIVE CALIFORNIA</h1>
         <h2>Explore the Stillness between Breaths</h2>
         {{ with .Content }} <div class="homepage-content text-justify">{{ . }}</div> {{ end }}
-        <div class="button-div" aria-label="Learn to freedive"><a href="{{ .Site.BaseURL }}courses" class="cta-button">Learn to Freedive</a></div>
+        <div class="button-div" aria-label="Learn to freedive">
+          <a href="{{ .Site.BaseURL }}courses" class="cta-button">Learn to Freedive</a>
+        </div>
     </div>
 </main>
 
