Add messenger button

--- a/layouts/course/single.html
+++ b/layouts/course/single.html
@@ -31,7 +31,12 @@
       role="link">
         Sign up
     </button>
-
+    
+    <div style="margin:2em">
+      <a href="https://m.me/freedive.california">
+        <i class="fab fa-facebook-messenger fa-5x"></i>
+      </a>
+    </div>
 </main>
 
 {{ partial "footer" . }}
