Update with deposit link

--- a/layouts/course/single.html
+++ b/layouts/course/single.html
@@ -27,9 +27,9 @@
     <button
       class="checkout-button blue-button"
       id="checkout-button-{{ .Param "sku" }}"
-      aria-label="Sign up"
+      aria-label="Make a Deposit"
       role="link">
-        Sign up
+        Make a Deposit
     </button>
     
     <div style="margin:2em">
